# rl_robotic_simulation_tutorials

./: .gitignore  COURSE_OVERVIEW.md  INSTALLATION_GUIDE.md  LICENSE  README.md  REPOSITORY_SUMMARY.md  main.py  pyproject.toml  requirements.txt  setup_uv.bat  setup_uv.sh
01_foundations/: 00_frozenlake_dynamic_programming.ipynb  01_cartpole_q_learning.ipynb  03_gym_atari_asteroids.ipynb  0_frozenlake_dynamic_programming.ipynb  1_gym_lunar_lander_dqn.ipynb  2_gym_blackjack.ipynb  4_gym_mujoco_human_standup.ipynb  README.md
02_deep_rl/: 00_dqn_from_scratch.ipynb  README.md
03_robotics/: 03_robotic_arm_reach_env_design.ipynb  README.md
04_advanced_topics/: 01_hierarchical_rl_options.ipynb  02_meta_learning_maml_concepts.ipynb  03_inverse_rl_airl_concepts.ipynb  README.md
grid/: 0_car_neighborhood_w_llava.ipynb
guides/: UV_QUICK_REFERENCE.md
gymnasium/: 0_gym_cartpole.ipynb  0_gym_cartpole_q_learning.ipynb  1_gym_lunar_lander.ipynb  1_gym_lunar_lander_dqn.ipynb  2_gym_blackjack.ipynb  3_gym_atari_asteroids.ipynb  4_gym_mujoco_human_standup.ipynb
notebooks/01_foundations/: 00_frozenlake_dynamic_programming.ipynb  01_cartpole_q_learning.ipynb  04_gym_lunar_lander_dqn.ipynb  05_gym_mujoco_human_standup.ipynb
notebooks/02_deep_rl/: 01_ppo_from_scratch_concepts.ipynb
notebooks/03_robotics/: 00_car_neighborhood_w_llava.ipynb  01_mujoco_basics_inspect_env.ipynb  02_sac_continuous_control_mujoco.ipynb
notebooks/05_Gazebo/: README.md
utils/: __init__.py  visualization.py
