[project]
name = "rl-robotic-simulation-tutorials"
version = "1.0.0"
description = "Course on Reinforcement Learning & Robotics Simulation"
authors = [
    {name = "Duncan Calvert", email = "duncanscalvert@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["reinforcement-learning", "robotics", "mujoco", "gymnasium", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
    "Topic :: Education",
]

dependencies = [
    "gymnasium[all]>=0.29.0",
    "gymnasium[mujoco]>=0.29.0",
    "mujoco>=2.3.0",
    "swig>=4.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tensorflow>=2.12.0",
    "stable-baselines3>=2.0.0",
    "sb3-contrib>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "ipykernel>=6.20.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "tensorboard>=2.12.0",
    "pybullet>=3.2.0",
    "robosuite>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/duncancalvert/rl_robotic_simulation_tutorials"
Documentation = "https://github.com/duncancalvert/rl_robotic_simulation_tutorials#readme"
Repository = "https://github.com/duncancalvert/rl_robotic_simulation_tutorials"
Issues = "https://github.com/duncancalvert/rl_robotic_simulation_tutorials/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.uv.workspace]
members = [
    "rl_robotics",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=utils --cov-report=term-missing"
