[project]
name = "rl-robotic-simulation-tutorials"
version = "0.1.0"
description = "A repository for teaching robotic reinforcement learning using simulation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
]
